--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -28,6 +28,7 @@ time, mark, audio, video {
     font-family: $imdb-font;
     color: rgba(255, 255, 255, 0.7);
     list-style: none;
+    word-wrap: break-word;
 }
 
 
